buttons print, add kinda works,这是WIP

--- a/index.html
+++ b/index.html
@@ -17,35 +17,40 @@
     <div class="main">
         <div class="calculator">
             <div class="screen-holder">
-                <div class="screen"></div>
+                <div class="screen">
+                    <div class="top-screen" id="topScreen">
+                    </div>
+                    <div class="bottom-screen" id="topScreen">
+                    </div>
+                </div>
             </div>
             <div class="clear-and-delete">
-                <button class="clear">Clear</button>
-                <button class="delete">Delete</button>
+                <button class="clear" id="clearButton">Clear</button>
+                <button class="delete" id="deleteButton">Delete</button>
             </div>
             <div class="row-1">
-                <button>7</button>
-                <button>8</button>
-                <button>9</button>
-                <button>÷</button>
+                <button id="7button">7</button>
+                <button id="8button">8</button>
+                <button id="9button">9</button>
+                <button id="divideButton">÷</button>
             </div>
             <div class="row-2">
-                <button>4</button>
-                <button>5</button>
-                <button>6</button>
-                <button>x</button>
+                <button id="4button">4</button>
+                <button id="5button">5</button>
+                <button id="6button">6</button>
+                <button id="multiplyButton">x</button>
             </div>
             <div class="row-3">
-                <button>1</button>
-                <button>2</button>
-                <button>3</button>
-                <button>-</button>
+                <button id="1button">1</button>
+                <button id="2button">2</button>
+                <button id="3button">3</button>
+                <button id="subtractButton">-</button>
             </div>
             <div class="row-4">
-                <button>.</button>
-                <button>0</button>
-                <button>=</button>
-                <button>+</button>
+                <button id="decimal">.</button>
+                <button id="0button">0</button>
+                <button id="equals">=</button>
+                <button id="plusButton">+</button>
             </div>
         </div>
     </div>
