initial add function

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="screen">
                     <div class="top-screen" id="topScreen">
                     </div>
-                    <div class="bottom-screen" id="topScreen">
+                    <div class="bottom-screen" id="bottomScreen">
                     </div>
                 </div>
             </div>
