readme table implementation

--- a/index.html
+++ b/index.html
@@ -18,10 +18,8 @@
         <div class="calculator">
             <div class="screen-holder">
                 <div class="screen">
-                    <div class="top-screen" id="topScreen">
-                    </div>
-                    <div class="bottom-screen" id="bottomScreen">
-                    </div>
+                    <div class="top-screen" id="topScreen"></div>
+                    <div class="bottom-screen" id="bottomScreen">0</div>
                 </div>
             </div>
             <div class="clear-and-delete">
