--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
             </div>
         </div>
     </div>
+    <div class="footer">
+        Copyright &copy; <script>document.write(new Date().getFullYear())</script> <a href="http://timjedrek.com">Tim Jedrek LLC</a>
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
